isolated filesystem fix, java 11 support